--- a/presentation_09.html
+++ b/presentation_09.html
@@ -13,14 +13,14 @@
 <body>
 
   <a target="_self" href="presentation_10.html">
-      <img class="img-portrait" src="img/portrait_09.jpg" alt"">
-      <img class="img-landscape" src="img/landscape_09.jpg" alt"">
+      <img class="img-portrait" src="img-port/portrait_09.jpg" alt"">
+      <img class="img-landscape" src="img-land/landscape_09.jpg" alt"">
   </a>
 
   <audio autoplay="true">
       <source src="./SOUND_music/Voice.mp3" type="audio/mpeg"></source>
       <source src="./SOUND_music/Voice.ogg" type="audio/ogg"></source>
-  </audio
+  </audio>
 
 </body>
 
