--- a/presentation_05.html
+++ b/presentation_05.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html
+<!DOCTYPE html>
 
 <html>
 
@@ -12,8 +12,8 @@
 <body>
 
   <a target="_self" href="presentation_06.html">
-      <img class="img-portrait" src="img/portrait_05.jpg" alt"">
-      <img class="img-landscape" src="img/landscape_05.jpg" alt"">
+      <img class="img-portrait" src="img-port/portrait_05.jpg" alt"">
+      <img class="img-landscape" src="img-land/landscape_05.jpg" alt"">
   </a>
 
 </body>
