--- a/presentation_06.html
+++ b/presentation_06.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html
+<!DOCTYPE html>
 
 <html>
 
@@ -12,8 +12,8 @@
 <body>
 
   <a target="_self" href="presentation_07.html">
-      <img class="img-portrait" src="img/portrait_06.jpg" alt"">
-      <img class="img-landscape" src="img/landscape_06.jpg" alt"">
+      <img class="img-portrait" src="img-port/portrait_06.jpg" alt"">
+      <img class="img-landscape" src="img-land/landscape_06.jpg" alt"">
   </a>
 
 </body>
