--- a/presentation_08.html
+++ b/presentation_08.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html
+<!DOCTYPE html>
 
 <html>
 
@@ -13,8 +13,8 @@
 <body>
 
   <a target="_self" href="presentation_09.html">
-      <img class="img-portrait" src="img/portrait_08.jpg" alt"">
-      <img class="img-landscape" src="img/landscape_08.jpg" alt"">
+      <img class="img-portrait" src="img-port/portrait_08.jpg" alt"">
+      <img class="img-landscape" src="img-land/landscape_08.jpg" alt"">
   </a>
 
 </body>
