--- a/presentation_02.html
+++ b/presentation_02.html
@@ -11,6 +11,11 @@
 
 <body>
 
+  <audio autoplay="true">
+      <source src="./SOUND_voice/Brown_Skin_Girl.mp3" type="audio/mpeg"></source>
+      <source src="./SOUND_voice/Brown_Skin_Girl.ogg" type="audio/ogg"></source>
+  </audio>
+
   <a target="_self" href="presentation_03.html">
       <img class="img-portrait" src="img-port/portrait_02.jpg" alt"">
       <img class="img-landscape" src="img-land/landscape_02.jpg" alt"">
