--- a/presentation_09.html
+++ b/presentation_09.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <a target="_self" href="presentation_10.html">
+  <a target="_self" href="presentation_10a.html">
       <img class="img-portrait" src="img-port/portrait_09.jpg" alt"">
       <img class="img-landscape" src="img-land/landscape_09.jpg" alt"">
   </a>
