--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="mystyle.css">
 <title>Pat</title>
@@ -11,8 +11,8 @@
 <body>
 
   <a target="_self" href="presentation_00.html">
-      <img class="img-portrait" src="img-port/portrait_message.jpg" alt"">
-      <img class="img-landscape" src="img-land/landscape_message.jpg" alt"">
+      <img class="img-portrait" src="img-port/portrait_message.jpg" alt="">
+      <img class="img-landscape" src="img-land/landscape_message.jpg" alt="">
   </a>
 
 </body>
