--- a/presentation_03.html
+++ b/presentation_03.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="mystyle.css">
 <title>Pat</title>
@@ -12,8 +12,8 @@
 <body>
 
   <a target="_self" href="presentation_04.html">
-      <img class="img-portrait" src="img-port/portrait_03.jpg" alt"">
-      <img class="img-landscape" src="img-land/landscape_03.jpg" alt"">
+      <img class="img-portrait" src="img-port/portrait_03.jpg" alt="">
+      <img class="img-landscape" src="img-land/landscape_03.jpg" alt="">
   </a>
 
 </body>
