--- a/presentation_08.html
+++ b/presentation_08.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="mystyle.css">
 <title>Pat</title>
@@ -13,8 +13,8 @@
 <body>
 
   <a target="_self" href="presentation_09.html">
-      <img class="img-portrait" src="img-port/portrait_08.jpg" alt"">
-      <img class="img-landscape" src="img-land/landscape_08.jpg" alt"">
+      <img class="img-portrait" src="img-port/portrait_08.jpg" alt="">
+      <img class="img-landscape" src="img-land/landscape_08.jpg" alt="">
   </a>
 
 </body>
