--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="mystyle.css">
-<title>Pat</title>
+<title>Remember Pat v1.2</title>
 </head>
 
 <body>
 
   <a target="_self" href="presentation_00.html">
-      <img class="img-portrait" src="img-port/portrait_message.jpg" alt="">
-      <img class="img-landscape" src="img-land/landscape_message.jpg" alt="">
+      <img class="img-portrait" src="img-port/portrait_message.jpg" alt="" style="width:100%">
+      <img class="img-landscape" src="img-land/landscape_message.jpg" alt="" style="width:100%">
   </a>
 
 </body>
