--- a/presentation_02.html
+++ b/presentation_02.html
@@ -6,14 +6,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="mystyle.css">
-<title>Remember Pat v1.1</title>
+<title>Remember Pat v1.2</title>
 </head>
 
 <body>
 
   <a target="_self" href="presentation_03.html">
-      <img class="img-portrait" src="img-port/portrait_02.jpg" alt="">
-      <img class="img-landscape" src="img-land/landscape_02.jpg" alt="">
+      <img class="img-portrait" src="img-port/portrait_02.jpg" alt="" style="width:100%">
+      <img class="img-landscape" src="img-land/landscape_02.jpg" alt="" style="width:100%">
   </a>
 
   <audio autoplay>
