--- a/presentation_06.html
+++ b/presentation_06.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <a target="_self" href="presentation_07.html">
+  <a target="_self" href="./presentation_07.html">
       <img class="img-portrait" src="img-port/portrait_06.jpg" alt="" style="width:100%">
       <img class="img-landscape" src="img-land/landscape_06.jpg" alt="" style="width:100%">
   </a>
