--- a/presentation_05.html
+++ b/presentation_05.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <a target="_self" href="presentation_06.html">
+  <a target="_self" href="./presentation_06.html">
       <img class="img-portrait" src="img-port/portrait_05.jpg" alt="" style="width:100%">
       <img class="img-landscape" src="img-land/landscape_05.jpg" alt="" style="width:100%">
   </a>
